Fix margin issue on mobile screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,6 @@ img {
 
 .container {
     max-width: 768px;
-    margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
 }
 
@@ -624,7 +623,6 @@ img {
     }
     
     container {
-        margin-left: var(--mb-1);
         margin-right: var(--mb-1);
     }
 
